# rwire

./: .dockerignore  .env.local  .env.production  .gitignore  AUDIT-2026-02-06.md  AUDIT_ROADMAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOC_UPDATE_ROADMAP.md  Dockerfile  HANDOFF.md  LICENSE-APACHE  LICENSE-MIT  PLAYGROUND_FIXES_ROADMAP.md  PWA_ROADMAP.md  README.md  RELEASE_ROADMAP.md  docker-compose.local.yml  docker-compose.production.yml  dsl-binary-guide.md  restart-server.sh
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/llama-modnitor/: .env.example  .gitignore  Cargo.toml
apps/llama-modnitor/docs/: llm-launcher-plan.md
apps/llama-modnitor/src/: convert.rs  cpu.rs  main.rs  mem.rs  modelmeta.rs  models.rs  profiles.rs  vram.rs
apps/llama-modnitor/src/gpu/: dummy.rs  mod.rs  nvidia.rs  rocm.rs
apps/llama-modnitor/src/launcher/: engine.rs  mod.rs  telemetry.rs
apps/llama-modnitor/src/snapshot/: catalog.rs  mod.rs
apps/llama-modnitor/src/ui/: cards.rs  dashboard.rs  form.rs  mod.rs
apps/llama-modnitor/src/ui/handlers/: config.rs  flags.rs  mod.rs  session.rs
apps/rwire-design-system/: Cargo.toml
apps/rwire-docs/: Cargo.toml
apps/rwire-examples/: Cargo.toml
apps/rwire-website/: Cargo.toml
docs/: binary-protocol-v2.md  chat-component-design.md  comparative-study.md  docs-upgrade-roadmap.md  file-editor-design.md  plan-state-split.md  protocol-extraction-plan.md  reactivity.md  routing-study.md  rwire-token-phase1.md  rwire-token-phase2.md  rwire-token-phase3.md  rwire-token-phase4.md  rwire-token-phase5.md  rwire-token-phase6.md  rwire-token-roadmap.md  scroll-handling.md  session-persistence-plan.md  state-system.md  theming-study.md  tree-shaking-redesign.md  vim-mode-design.md  website-study.md
docs/client-action-migration/: accordion.md  app-shell.md  copy-button.md  drawer.md  dropdown.md  tabs.md  (+6 more)
examples/editor/: Cargo.toml
examples/editor/sample/: README.md  notes.toml
examples/editor/sample/src/: main.rs
examples/editor/src/: main.rs
libs/rwire/: Cargo.toml  test-design-system.js
libs/rwire-components/: Cargo.toml
libs/rwire-components/docs/: accordion.md  alert.md  app-shell.md  avatar-group.md  avatar.md  badge.md  blockquote.md  breadcrumb.md  button.md  card.md  checkbox.md  code.md  container.md  copy-button.md  divider.md  drawer.md  dropdown.md  empty-state.md  footer.md  form-field.md  grid.md  image.md  input.md  kbd.md  label.md  link.md  list.md  modal.md  nav-menu.md  pagination.md  progress.md  radio.md  select.md  skeleton.md  slider.md  spacer.md  spinner.md  stack.md  stat.md  stepper.md  (+10 more)
libs/rwire-components/src/: accordion.rs  alert.rs  app_shell.rs  avatar.rs  avatar_group.rs  badge.rs  blockquote.rs  breadcrumb.rs  button.rs  card.rs  catalog.rs  chat.rs  chat_entry.rs  chat_item.rs  chat_scroll.rs  chat_transcript.rs  checkbox.rs  chip.rs  code.rs  code_editor.rs  composer.rs  container.rs  copy_button.rs  divider.rs  document_view.rs  drawer.rs  dropdown.rs  empty_state.rs  file_tree.rs  footer.rs  form_field.rs  fs_source.rs  grid.rs  image.rs  input.rs  kbd.rs  label.rs  lib.rs  link.rs  list.rs  (+29 more)
libs/rwire-editor/: Cargo.toml
libs/rwire-editor/src/: lib.rs  state.rs  surface.rs
libs/rwire-macros/: Cargo.toml
libs/rwire-macros/src/: lib.rs  token_scanner.rs
libs/rwire-markdown/: Cargo.toml
libs/rwire-markdown/src/: code.rs  frontmatter.rs  highlight.rs  lib.rs  markdown.rs  parser.rs  prose.rs  search.rs  sidebar.rs  site.rs  toc.rs
libs/rwire-themes/: Cargo.toml
libs/rwire-themes/src/: palettes.rs  styles.rs
libs/rwire/assets/: runtime.min.js
libs/rwire/assets/ext/: vim.min.js
libs/rwire/src/: action.rs  attr_tokens.rs  builder.rs  capsule.rs  capsule_gen.rs  config.rs  health.rs  icons.rs  item_ref.rs  lib.rs  metrics.rs  persist.rs  pwa.rs  registry.rs  router.rs  server.rs  session.rs  state.rs  style_groups.rs  style_tokens.rs  theme.rs
libs/rwire/src/protocol/: decoder.rs  encoder.rs  mod.rs  opcodes.rs  varint.rs
libs/rwire/src/tokens/: css.rs  palette.rs  primitives.rs
libs/rwire/tests/: builder.rs  field_deps.rs  fine_grained_reactivity.rs  handler_id.rs  integration.rs  item_ref.rs  lazy_css.rs  morph_test.mjs  nested_renderer.rs  protocol.rs  state.rs  static_html.rs  synced_update.rs  wire_roundtrip.mjs  wire_roundtrip.rs
runtime/: README.md  build.mjs  package-lock.json  package.json  sync.mjs  tsconfig.json
rwire/: BUGS.md  BUG_SUMMARY.md  COMPONENT_IMPLEMENTATION_PLAN.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  SESSION_SUMMARY.md  inspect-css.py
rwire-design-system/: Cargo.toml
rwire-docs/: Cargo.toml
rwire-examples/: Cargo.toml
rwire-macros/: Cargo.toml
rwire-markdown/: Cargo.toml
rwire-token/: Cargo.toml
rwire-website/: Cargo.toml
rwire/src/: attr_tokens.rs  builder.rs  capsule.rs  capsule_gen.rs  config.rs  form.rs  health.rs  icons.rs  item_ref.rs  lib.rs  metrics.rs  persist.rs  registry.rs  router.rs  server.rs  session.rs  state.rs  store.rs  style.rs  style_groups.rs  style_tokens.rs  theme.rs  token_macro.rs  variants.rs
rwire/src/components/: accordion.rs  alert.rs  app_shell.rs  avatar.rs  avatar_group.rs  badge.rs  blockquote.rs  breadcrumb.rs  button.rs  card.rs  checkbox.rs  code.rs  container.rs  copy_button.rs  divider.rs  docs_sidebar.rs  drawer.rs  dropdown.rs  empty_state.rs  footer.rs  form_field.rs  grid.rs  image.rs  input.rs  kbd.rs  label.rs  link.rs  list.rs  mod.rs  modal.rs  nav_menu.rs  pagination.rs  progress.rs  prose.rs  radio.rs  registry.rs  select.rs  skeleton.rs  slider.rs  spacer.rs  (+16 more)
rwire/src/docs/: frontmatter.rs  mod.rs  parser.rs  search.rs
rwire/src/protocol/: decoder.rs  encoder.rs  mod.rs  opcodes.rs  varint.rs
rwire/src/tokens/: css.rs  mod.rs  palette.rs  primitives.rs
rwire/tests/: builder.rs  fine_grained_reactivity.rs  integration.rs  item_ref.rs  nested_renderer.rs  protocol.rs  state.rs  synced_update.rs
website/: Cargo.toml
wire-wasm/: Cargo.toml
wire-wasm-macros/: Cargo.toml
(+216 files in other folders)
