[workspace]
members = [
    "libs/rwire",
    "libs/rwire-macros",
    "libs/rwire-components",
    "libs/rwire-markdown",
    "libs/rwire-themes",
    "apps/rwire-website",
    "apps/rwire-docs",
    "apps/rwire-design-system",
    "apps/rwire-examples",
    "examples/counter",
    "examples/todolist",
    "examples/todo-combined",
    "examples/fine-grained",
    "libs/rwire-canvas",
    "examples/battlefield",
]
resolver = "2"
