[workspace]
members = [
    "libs/rwire",
    "libs/rwire-macros",
    "libs/rwire-components",
    "libs/rwire-markdown",
    "libs/rwire-themes",
    "apps/rwire-website",
    "apps/llama-modnitor",
    "apps/rwire-docs",
    "apps/rwire-design-system",
    "apps/rwire-examples",
    "examples/chat",
    "examples/counter",
    "examples/todolist",
    "examples/todo-combined",
    "examples/fine-grained",
    "examples/nested",
    "examples/router",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arte-fact/rwire"
