[package]
name = "llama-modnitor-rwire"
version = "0.1.0"
edition = "2024"

[dependencies]
rwire = { path = "../../libs/rwire" }
rwire-components = { path = "../../libs/rwire-components" }
rwire-themes = { path = "../../libs/rwire-themes" }
async-std = { version = "1.12", features = ["attributes"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mimalloc = "0.1"
libc = "0.2"
dotenvy = "0.15"
