[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
rwire = { path = "../../libs/rwire" }
rwire-components = { path = "../../libs/rwire-components" }
rwire-editor = { path = "../../libs/rwire-editor" }
rwire-themes = { path = "../../libs/rwire-themes" }
async-std = { version = "1.12", features = ["attributes"] }
