[package]
name = "rwire-editor"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "FileEditor kit for rwire: a sandboxed file explorer + editor with dirty tracking, autosave, and guarded saves"
keywords = ["web", "ui", "editor", "websocket"]
categories = ["web-programming", "gui"]

[dependencies]
rwire = { path = "../rwire", version = "0.1.0" }
rwire-components = { path = "../rwire-components", version = "0.1.0" }
rwire-markdown = { path = "../rwire-markdown", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
