[package]
name = "rwire-macros"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Proc macros for rwire: #[handler], #[renderer], #[derive(State)], #[theme]"
keywords = ["web", "ui", "macros"]
categories = ["web-programming"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "visit"] }
quote = "1"
proc-macro2 = "1"
