[package]
name = "rwire-themes"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Ready-made palettes and style presets for rwire (nord, catppuccin, dracula, ...)"
keywords = ["web", "ui", "themes"]
categories = ["web-programming", "gui"]

[dependencies]
rwire = { path = "../rwire", version = "0.1.0" }
