[package]
name = "rwire"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
description = "Server-driven web UI over a binary WebSocket protocol: Rust owns the state, a ~13KB runtime renders the DOM"
keywords = ["web", "ui", "websocket", "server-side", "framework"]
categories = ["web-programming", "gui", "network-programming"]
readme = "../../README.md"

[dependencies]
async-channel = "2.3"
async-std = { version = "1.12", features = ["attributes"] }
async-tungstenite = { version = "0.25", features = ["async-std-runtime"] }
bytes = "1.5"
futures = "0.3"
rusqlite = { version = "0.34", features = ["bundled"] }
rwire-macros = { path = "../rwire-macros", version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.5"
serde_json = "1.0"
